<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#1fbff4"
    android:padding="@dimen/widget_margin" >

    <TextView
        android:id="@+id/appwidget_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/appwidget_text"
        android:text="@string/appwidget_text"
        android:textColor="#ffffff"
        android:textSize="@dimen/textMedium"
        android:textStyle="bold|italic" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/paddingSmall">

        <TextView
            android:id="@+id/soldOut_Beer01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/paddingSmall"
            android:text="        "
            android:contentDescription="@string/sold_out_descriptor"
            android:textAlignment="center"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="@dimen/textMedium"
            android:textStyle="bold|italic" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/paddingSmall"
            android:text="@string/beer01_name"
            android:textColor="#ffffff"
            android:textSize="@dimen/textMedium"
            android:textStyle="bold"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/paddingSmall">

        <TextView
            android:id="@+id/soldOut_Beer02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/paddingSmall"
            android:text="        "
            android:contentDescription="@string/sold_out_descriptor"
            android:textAlignment="center"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="@dimen/textMedium"
            android:textStyle="bold|italic" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/paddingSmall"
            android:text="@string/beer02_name"
            android:textColor="#ffffff"
            android:textSize="@dimen/textMedium"
            android:textStyle="bold"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/paddingSmall">

        <TextView
            android:id="@+id/soldOut_Beer03"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/paddingSmall"
            android:text="        "
            android:contentDescription="@string/sold_out_descriptor"
            android:textAlignment="center"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="@dimen/textMedium"
            android:textStyle="bold|italic" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/paddingSmall"
            android:text="@string/beer03_name"
            android:textColor="#ffffff"
            android:textSize="@dimen/textMedium"
            android:textStyle="bold"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/paddingSmall">

        <TextView
            android:id="@+id/soldOut_Beer04"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/paddingSmall"
            android:text="        "
            android:contentDescription="@string/sold_out_descriptor"
            android:textAlignment="center"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="@dimen/textMedium"
            android:textStyle="bold|italic" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/paddingSmall"
            android:text="@string/beer04_name_widget"
            android:textColor="#ffffff"
            android:textSize="@dimen/textMedium"
            android:textStyle="bold"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/paddingSmall">

        <TextView
            android:id="@+id/soldOut_Beer05"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/paddingSmall"
            android:text="        "
            android:contentDescription="@string/sold_out_descriptor"
            android:textAlignment="center"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="@dimen/textMedium"
            android:textStyle="bold|italic" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/paddingSmall"
            android:text="@string/beer05_name"
            android:textColor="#ffffff"
            android:textSize="@dimen/textMedium"
            android:textStyle="bold"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/paddingSmall">

        <TextView
            android:id="@+id/soldOut_Beer06"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/paddingSmall"
            android:text="        "
            android:contentDescription="@string/sold_out_descriptor"
            android:textAlignment="center"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="@dimen/textMedium"
            android:textStyle="bold|italic" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/paddingSmall"
            android:text="@string/beer06_name"
            android:textColor="#ffffff"
            android:textSize="@dimen/textMedium"
            android:textStyle="bold"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/paddingSmall">

        <TextView
            android:id="@+id/soldOut_Beer07"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/paddingSmall"
            android:text="        "
            android:contentDescription="@string/sold_out_descriptor"
            android:textAlignment="center"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="@dimen/textMedium"
            android:textStyle="bold|italic" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/paddingSmall"
            android:text="@string/beer07_name"
            android:textColor="#ffffff"
            android:textSize="@dimen/textMedium"
            android:textStyle="bold"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/paddingSmall">

        <TextView
            android:id="@+id/soldOut_Beer08"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/paddingSmall"
            android:text="        "
            android:contentDescription="@string/sold_out_descriptor"
            android:textAlignment="center"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="@dimen/textMedium"
            android:textStyle="bold|italic" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/paddingSmall"
            android:text="@string/beer08_name"
            android:textColor="#ffffff"
            android:textSize="@dimen/textMedium"
            android:textStyle="bold"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/paddingSmall">

        <TextView
            android:id="@+id/soldOut_Beer09"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/paddingSmall"
            android:text="        "
            android:contentDescription="@string/sold_out_descriptor"
            android:textAlignment="center"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="@dimen/textMedium"
            android:textStyle="bold|italic" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/paddingSmall"
            android:text="@string/beer09_name_widget"
            android:textColor="#ffffff"
            android:textSize="@dimen/textMedium"
            android:textStyle="bold"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/paddingSmall">

        <TextView
            android:id="@+id/soldOut_Beer10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/paddingSmall"
            android:text="        "
            android:contentDescription="@string/sold_out_descriptor"
            android:textAlignment="center"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="@dimen/textMedium"
            android:textStyle="bold|italic" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/paddingSmall"
            android:text="@string/beer10_name_widget"
            android:textColor="#ffffff"
            android:textSize="@dimen/textMedium"
            android:textStyle="bold"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/paddingSmall">

        <TextView
            android:id="@+id/soldOut_Beer11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/paddingSmall"
            android:text="        "
            android:contentDescription="@string/sold_out_descriptor"
            android:textAlignment="center"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="@dimen/textMedium"
            android:textStyle="bold|italic" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/paddingSmall"
            android:text="@string/beer11_name"
            android:textColor="#ffffff"
            android:textSize="@dimen/textMedium"
            android:textStyle="bold"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />

</LinearLayout>